--- a/React/UdemyCourse/learnapp/src/components/UI/Button/Button.module.css
+++ b/React/UdemyCourse/learnapp/src/components/UI/Button/Button.module.css
@@ -19,6 +19,11 @@
     color: #ccc;
     cursor: not-allowed;
   }
+
+  .Button:disabled {
+    color: #ccc;
+    cursor: not-allowed;
+  }
   
   .Success {
     color: #5c9210;
