--- a/React/UdemyCourse/learnapp/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
+++ b/React/UdemyCourse/learnapp/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
@@ -1,114 +1,118 @@
-.BreadBottom {
-    height: 13%;
-    width: 80%;
-    background: linear-gradient(#F08E4A, #e27b36);
-    border-radius: 0 0 30px 30px;
-    box-shadow: inset -15px 0 #c15711;
-    margin: 2% auto;
-}
-
 .BreadTop {
-    height: 20%;
-    width: 80%;
-    background: linear-gradient(#bc581e, #e27b36);
-    border-radius: 50% 50% 0 0;
-    box-shadow: inset -15px 0 #c15711;
-    margin: 2% auto;
-    position: relative;
+  height: 25%;
+  width: 90%;
+  background: linear-gradient(#BC581E, #E27B36);
+  border-radius: 55% 55% 0 0;
+  box-shadow: inset -12px 0 #C15711;
+  margin:  2% auto;
+  position: relative;
 }
 
 .Seeds1 {
-    width: 10%;
-    height: 15%;
-    position: absolute;
-    background-color: white;
-    left: 30%;
-    top: 50%;
-    border-radius: 40%;
-    transform: rotate(-20deg);
-    box-shadow: inset -2px -3px #c9c9c9;
-    
+  position: absolute;
+  width: 10%;
+  height: 15%;
+  background-color: white;
+  left: 30%;
+  top: 50%;
+  border-radius: 45%;
+  transform: rotate(-22deg);
+  box-shadow: inset -2px -3px #C7C7C7;
 }
 
 .Seeds1:after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: white;
-    left: -170%;
-    top: -260%;
-    border-radius: 40%;
-    transform: rotate(60deg);
-    box-shadow: inset -1px 2px #c9c9c9;
-  }
-
-.Seeds1:before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: white;
-    left: 180%;
-    top: -50%;
-    border-radius: 40%;
-    transform: rotate(60deg);
-    box-shadow: inset -1px -3px #c9c9c9;
-  }
-
-  .Seeds2 {
-    width: 10%;
-    height: 15%;
-    position: absolute;
-    background-color: white;
-    left: 64%;
-    top: 50%;
-    border-radius: 40%;
-    transform: rotate(10deg);
-    box-shadow: inset -3px 0 #c9c9c9;
-  }
-
-  .Seeds2:before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: white;
-    left: 150%;
-    top: -130%;
-    border-radius: 40%;
-    transform: rotate(90deg);
-    box-shadow: inset 1px 3px #c9c9c9;
-  }
-
-
-.Meat {
-    width: 80%;
-    height: 8%;
-    background: linear-gradient(#7f3608, #702e05);
-    margin: 2% auto;
-    border-radius: 15px;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: white;
+  left: -182%;
+  top: -271%;
+  border-radius: 40%;
+  transform: rotate(64deg);
+  box-shadow: inset -2px 0 #C7C7C7;
 }
 
-.Cheese {
-    width: 90%;
-    height: 4.5%;
-    margin: 2% auto;
-    background: linear-gradient(#f4d004, #d6bb22);
-    border-radius: 20px;
+.Seeds1:before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: white;
+  left: 176%;
+  top: -5%;
+  border-radius: 40%;
+  transform: rotate(55deg);
+  box-shadow: inset -1px 0 #C7C7C7;
+}
+
+.Seeds2 {
+  position: absolute;
+  width: 10%;
+  height: 15%;
+  background-color: white;
+  left: 64%;
+  top: 52%;
+  border-radius: 42%;
+  transform: rotate(15deg);
+  box-shadow: inset -2px -1px #C7C7C7;
+}
+
+.Seeds2:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  left: 155%;
+  top: -145%;
+  border-radius: 42%;
+  transform: rotate(98deg);
+  box-shadow: inset -2px 3px #C7C7C7;
 }
 
 .Salad {
-    width: 85%;
-    height: 7%;
-    margin: 2% auto;
-    background: linear-gradient(#228c1d, #91ce50);
-    border-radius: 20px;
+  width: 95%;
+  height: 8%;
+  background: linear-gradient(#228C1D, #91CE50);
+  margin: 2% auto;
+  border-radius: 30px;
 }
 
 .Bacon {
-    width: 80%;
-    height: 3%;
-    background: linear-gradient(#bf3813, #c45e38);
-    margin: 2% auto;
+  width: 90%;
+  height: 3%;
+  background: linear-gradient(#BF3813, #C45E38);
+  margin: 2% auto;
+}
+
+.Cheese {
+  width: 92%;
+  height: 5%;
+  background: linear-gradient(#F4D004, #D6BB22);
+  margin: 2% auto;
+  border-radius: 20px;
+}
+
+.Meat {
+  width: 87%;
+  height: 10%;
+  background: linear-gradient(#7F3507, #702E05);
+  margin: 2% auto;
+  border-radius: 15px;
+}
+
+.BreadBottom {
+  height: 18%;
+  width: 90%;
+  background: linear-gradient(#BC581E, #E27B36);
+  margin: 2% auto;
+  box-shadow: inset -15px 0 #C15711;
+  border-radius: 0 0 25px 25px;
+}
+
+.box {
+  width: 550px;
+  margin: auto;
+  height: 455px;
 }
